--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,20 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch TestRPG",
+            "request": "launch",
+            "mainClass": "singRPG.java.TestRPG",
+            "projectName": "rpg_324d6cfc"
+        },
+        {
+            "type": "java",
+            "name": "Launch RPG",
+            "request": "launch",
+            "mainClass": "singRPG.java.RPG",
+            "projectName": "rpg_324d6cfc"
+        },
+        {
+            "type": "java",
             "name": "Launch Current File",
             "request": "launch",
             "mainClass": "${file}"
